--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,14 +18,6 @@ html {
     background-image: url(https://iso.500px.com/wp-content/uploads/2014/07/hong-kong-cityscape1.jpg);
     background-size: auto;
 }
-
-.fix-footer {
-    position: absolute !important;
-    width: 100% !important;
-    bottom: 0 !important;
-    opacity: 0.5;
-}
-
 .is-scrollable {
     overflow-y: auto;
     display: flex;
@@ -44,7 +36,7 @@ html {
     margin-top: 1vw;
 }
 
-.main {
+.main, #content {
     height: 55vh;
     color: #ffffff;
 }
@@ -52,4 +44,39 @@ html {
 .is-blue-bg {
     text-shadow: 0px 0px 5px #ffffff;
     background-color: #9cd0df;
+}
+
+.fix-footer {
+    width: 100% !important;
+    opacity: 0.5;
+}
+.wrapper {
+    min-height: 100%;
+    margin-bottom: -50px;
+  }
+.push {
+    height: 25px;
+}
+.hauto{
+    height:auto;
+}
+.cards{
+    margin:30px;
+    width:30%;
+    float:left;
+}
+#searchf{
+    margin:4px;
+    height:25px;
+    border-radius: 5px;
+}
+.but{
+    background-color: darkslategrey !important;
+    text-align: center;
+    height:30px;
+    cursor: pointer;
+    position: absolute;
+}
+.hide{
+    display: none;
 }
