--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,70 +1,130 @@
+/* BASE ELEMENTS */
+
+/* Background image */
 html {
-    background-image: url(https://sig.grumpybumpers.com/host/cityscapes.gif);
-    background-size: auto;
+    /* This URL is to an online rotator. We could have made an array randomizer for this. But what we wanted to do, with unlimited time, is tag images to zip codes, and slow-fade the background into whatever closest matches a major metro for your zip code*/
+  background-image: url(https://sig.grumpybumpers.com/host/cityscapes.gif);
+  background-size: auto;
 }
+
+/* Helps force the table dimensions */
+table {
+  width: 100%;
+}
+
+/* Centering all images */
+image,
+img {
+  margin: 0 auto;
+}
+
+/* Redefines H1 and H2 after the sass reset from Bulma */
+h1,
+h2 {
+  text-align: center;
+  font-weight: bolder;
+}
+h1 {
+  font-size: 3vw;
+}
+h2 {
+  font-size: 2vw;
+}
+
+/* CLASS ELEMENTS */
+
+/* Both makes a set size for the box for all the AJAX content to rest in, and makes it internally scrollable. */
 .is-scrollable {
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    position: absolute;
-    max-height: 100%;
-    height: 55vh;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  max-height: 100%;
+  height: 55vh;
 }
 
+/* Coloring for the Explore button. */
+.button {
+    background-color: #FFFCB0;
+}
+
+/* Some forced centering. */
 .has-centered {
-    margin-left: auto;
-    margin-right: auto;
-  }
+  margin-left: auto;
+  margin-right: auto;
+}
 
+/* Some forced spacing. */
 .spacer {
-    margin-top: 1vw;
+  margin-top: 1vw;
 }
 
-.main, #content {
-    height: 55vh;
-    color: #ffffff;
+/* Main content holder; created an overflow rule to help objections from Eventful. */
+.main {
+  overflow: scroll;
 }
 
+/* Added a coloring class. */
 .is-blue-bg {
-    text-shadow: 0px 0px 5px #ffffff;
-    background-color: #9cd0df;
+  text-shadow: 0px 0px 5px #ffffff;
+  background-color: #9cd0df;
 }
 
+/* Some elements to toy with the footer. */
 .style-footer {
-    width: 100%;
-    opacity: 0.5;
-    height: 5vh;
-    padding-top: 0;
-}
-.wrapper {
-    min-height: 100%;
-    margin-bottom: -50px;
-  }
-.push {
-    height: 25px;
-}
-.cards{
-    margin:30px;
-    width:30%;
-    float:left;
-}
-#searchf{
-    margin:4px;
-    height:25px;
-    border-radius: 5px;
-}
-.but{
-    background-color: darkslategrey !important;
-    text-align: center;
-    height:30px;
-    cursor: pointer;
-    position: absolute;
-}
-.hide{
-    display: none;
+  width: 100%;
+  opacity: 0.5;
+  height: 5vh;
+  padding-top: 0;
 }
 
+/* Styling for the cards and card containers for various API returns. */
+.cards {
+  margin: 2vw;
+  width: 30%;
+  float: left;
+  padding: 2vw;
+}
+.card {
+  padding: 2vw;
+}
+
+/* Display toggle to hide responses we do not want to see. Mostly, the search bar for Yelp. */
+.hide {
+  display: none;
+}
+
+/* Another styling for containers returned from API. */
+.box {
+  float: left;
+  margin: 2vw;
+  max-height: ;
+}
+
+/* Basic clearfix to help fix floating conflicts. */
 .clearfix {
-    clear: both;
+  clear: both;
+}
+
+/* Styling to center the navbar. */
+.navbar {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ID ELEMENTS */
+
+/* Size and formatting control for the display area used for API returns. */
+#content {
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 3.5vw;
+  height: 55vh;
+}
+
+/* Formatting for the search feature from the Yelp API integration. */
+#searchf {
+  margin: 4px;
+  height: 25px;
+  border-radius: 5px;
 }
